- Teleport level had same problem as recall (when new wz became 0)
- Hacked up load2.c - backwards compatibility is only posssible
  in the future. ;)
- Players may not enter high level dungeons quite so easily.

15/01/2002 (Evileye)
- Fixed temple priest for dungeon master.
- Fixed typo in "amulet shatters".
- Base town no longer has wasteland or deep forest beside it.

** [B] stands for Bugfix.
** [C] stands for Client changes.
** [H] stands for Hack :)

==== below this line are the unfixed bugs known ====
[B] Self-reproducing black trap
[B] Panic save often enters into infinite loop.
[B] House doors still seem to crash sometimes.
[B] Saving on wilderness causes crash when coming back (due to unstaticing?)

==== below this line are changes to be done in the future ====
[minor ones]
- recall-depth array for each dungeons/towers
- full colour-support in show_file
- quiver/tool slot (not a monster! ;)
- sort unique-list according to the level
- tombstone screen
- wilderness compacting
- move slash-commands to another function
- auto-teleport for lowbies in wall(in case they saved in dungeon).
- low-sanity alart each 2000 turn or sth(and hallucination? :)
- cave_special should use union? and their save/load via csfunc

[major ones]
- new terrains and their effects (f_info.txt)
- variety of dungeon types (d_info.txt)
- better cave-generator (generate.c) {Asclep?}
- fully-implemented multiple towns (t_*.txt/st_info.txt)
- quests (needing LUA-hooks) {hopefully DarkGod}
- guild, or new party system
- backbone scenario (like token system)
- total rebalancing for all of them
- client updates necessary
- item stacks/monster inventory
- better vaults
- fix gfx again {Asclep}
- interactive spell system (like in C3)
- total source-code cleanup {takkaria?}
- new classes/races

==== below this line are RFEs collected so far (good or bad) ====
- more equipment slots in general (like Bracer)
- door spiking (with '/' key)
- pet/golem {Evileye/DG?}